Correction of .md a_07 and color_02b text and values

--- a/en/a_07.md
+++ b/en/a_07.md
@@ -46,4 +46,4 @@ To address inappropriate link grouping:
 
 * [WCAG 2.2: Understanding Success Criterion 2.4.1 (Bypass Blocks)](https://www.w3.org/WAI/WCAG22/Understanding/bypass-blocks.html)
 * [WCAG 2.2 Techniques: H97: Grouping related links using the nav element](https://www.w3.org/WAI/WCAG22/Techniques/html/H97)
-* [MDN Web Docs: The Navigation Section element (<nav>)](https://developer.mozilla.org/en-US/docs/Web/HTML/Element/nav)
+* [MDN Web Docs: The Navigation Section element (`<nav>`)](https://developer.mozilla.org/en-US/docs/Web/HTML/Element/nav)
